# bio-rs

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  biors-wasm-design-v0.45.0.md  deny.toml
crates/biors-backend-candle/: Cargo.toml
crates/biors-backend-candle/src/: config.rs  output.rs
crates/biors-backend-candle/tests/: candle_backend.rs
crates/biors-core/: AGENTS.md  Cargo.toml
crates/biors-core/bench-tools/: benchmark_fasta.rs
crates/biors-core/benches/: fasta_workloads.rs
crates/biors-core/examples/: benchmark_fasta.rs  tokenize.rs
crates/biors-core/src/: conversion.rs  error.rs  fasta.rs  formats.rs  hash.rs  lib.rs  reports.rs  runtime.rs  service.rs  templates.rs  verification.rs  workflow.rs
crates/biors-core/src/conversion/: entity.rs  issue.rs  sequence.rs  types.rs
crates/biors-core/src/fasta/: inspection.rs
crates/biors-core/src/formats/: capabilities.rs  fastq.rs  records.rs
crates/biors-core/src/formats/capabilities/: catalog.rs
crates/biors-core/src/formats/fastq/: error.rs  parse.rs  parse_tests.rs  types.rs  validation.rs
crates/biors-core/src/molecule/: error.rs  features.rs  graph.rs  mol2.rs  sdf.rs  types.rs
crates/biors-core/src/molecule/features/: graph_key.rs
crates/biors-core/src/molecule/mol2/: error.rs  record.rs
crates/biors-core/src/molecule/sdf/: error.rs  tests.rs  v2000.rs  v3000.rs
crates/biors-core/src/molecule/smiles/: validation.rs
crates/biors-core/src/package/: artifact_checks.rs  artifact_content.rs  manifest.rs  paths.rs  pipeline_config.rs  runtime.rs  tooling.rs  validation.rs
crates/biors-core/src/package/pipeline_config/: toml.rs
crates/biors-core/src/package/tooling/: tests.rs
crates/biors-core/src/package/validation/: contracts.rs  fixtures.rs
crates/biors-core/src/reports/: sections.rs  types.rs
crates/biors-core/src/runtime/: process_io.rs
crates/biors-core/src/sequence/: kind.rs  kind_validation.rs  report.rs  types.rs
crates/biors-core/src/sequence/kind_validation/: summary.rs
crates/biors-core/src/service/: batch.rs  hosted.rs  interface.rs
crates/biors-core/src/structure/: pdb.rs  residue_codes.rs  types.rs  validation.rs
crates/biors-core/src/structure/pdb/: error.rs  parse.rs  (+2 more)
crates/biors-core/src/templates/: definitions.rs  fields.rs  inputs.rs  outputs.rs  types.rs  validations.rs
crates/biors-core/src/tokenizer/: config.rs  lookup.rs  protein.rs  sinks.rs
crates/biors-core/src/verification/: hash.rs  types.rs
crates/biors-core/src/workflow/: provenance.rs  readiness.rs  validation.rs
crates/biors-core/tests/: conversion.rs  fasta_validation.rs  hosted_boundary.rs  model_input_contract.rs  model_input_payload.rs  package.rs  package_artifact_paths.rs  package_artifact_pipeline_config.rs  package_manifest_deserialization.rs  package_runtime_bridge_capabilities.rs  package_runtime_bridge_rejections.rs  package_runtime_bridge_supported.rs  package_validation_contracts.rs  package_validation_shapes.rs  runtime_external_process.rs  service_interface.rs  task_templates.rs  tokenizer_profiles.rs  verification_hash.rs  verification_report.rs  wasm_readiness.rs  workflow.rs
crates/biors-core/tests/common/: mod.rs
crates/biors-core/tests/fixtures/: runtime_process.py
crates/biors-python/: Cargo.toml  README.md  pyproject.toml
crates/biors-python/python/biors/: __init__.py  __init__.pyi
crates/biors-python/src/: conversion.rs  errors.rs  lib.rs  package.rs  sequence.rs  tokenizer.rs  types.rs  workflow.rs
crates/biors-python/tests/: python_api_support.py  test_python_package_api.py  test_python_workflow.py
(+420 files in other folders)
