[workspace]
members = [
    "packages/rust/biors",
    "packages/rust/biors-core",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bio-rs/bio-rs"
version = "0.33.0"

[workspace.dependencies]
biors-core = { version = "0.33.0", path = "packages/rust/biors-core" }
clap = { version = "4.5.37", features = ["derive"] }
clap_complete = "4.5.48"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yml = "0.0.12"
toml = "1.1.2"
