[workspace]
members = [
    "crates/biors",
    "crates/biors-backend-candle",
    "crates/biors-core",
    "crates/biors-mcp-server",
    "crates/biors-python",
    "crates/biors-wasm",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bio-rs/bio-rs"
rust-version = "1.88"
version = "0.56.0"

[workspace.dependencies]
biors-core = { version = "0.56.0", path = "crates/biors-core" }
candle-core = { version = "0.10.2", default-features = false }
clap = { version = "4.5.37", features = ["derive"] }
clap_complete = "4.5.48"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
toml = "1.1.2"
