[package]
name = "biors-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core protein input contracts and tokenization for bio-rs."
readme = "../../README.md"
keywords = ["bioinformatics", "protein", "tokenizer", "ai"]
categories = ["science"]

[dependencies]
serde.workspace = true
